<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SnailClient</string>
    <string name="hello">Hello Android, DemoAppActivity</string>
    <string name="settings">Settings</string>
    <string name="action_update">更新</string>
    <string name="action_info">上传信息</string>
    <string name="action_get_address">服务器状态</string>
    <string name="action_user_state">登录</string>
    <string name="action_check_update">检查新版本</string>
    <string name="action_confirm">确定</string>
    <string name="title_activity_main_page">选择项目</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="action_settings_screen">脑电波截图</string>
    <string name="action_user">未登录</string>
    <string name="action_settings_takepic">截图测试</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_main">snailClient</string>
    <string name="title_activity_info">系统信息</string>
    <string name="title_activity_bug">创建bug</string>
    <string name="title_activity_my_file_manager">MyFileManager</string>
    <string name="title_activity_all_test_list">项目列表</string>
    <string name="title_activity_submit_launch_result">兼容性测试报告</string>
    <string name="title_activity_dialog">测试结果</string>
    <string name="title_activity_oa_bug">OA bug</string>
    <string name="title_activity_upload_data">上传测试数据</string>
    <string name="title_activity_login2">登录</string>
    <string name="title_activity_submit_performance">提交性能数据</string>

    <!-- 新建性能数据页面参数 -->
    <string name="tv_version_name">报告名称：</string>
    <string name="tv_apk_name">应用名称：</string>
    <string name="tv_version_info">版本信息：</string>
    <string name="tv_version_date">版本发布日期：</string>
    <string name="tv_version_standard">测试标准：</string>
    <string name="tv_version_size">安装包大小：</string>
    <string name="tv_test_type">测试类型：</string>

    <!-- 已存在性能数据页面参数 -->
    <string name="tv_report_name">选择报告名称：</string>

    <!-- Strings related to login -->
    <string name="prompt_username">输入用户名</string>
    <string name="tv_username">用户名：</string>
    <string name="prompt_password">输入密码</string>
    <string name="tv_password">密码：</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">用户名不能为空</string>
    <string name="error_invalid_password">密码不能为空</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
