<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.snailclient.activity.fragments.ReportNewFragment">

    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyleInverse"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/contentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/customTextView"
                    android:text="@string/tv_version_name" />

                <EditText
                    android:id="@+id/et_version_name"
                    style="@style/customText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/customTextView"
                    android:text="@string/tv_apk_name" />

                <EditText
                    android:id="@+id/et_apk_name"
                    style="@style/customText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/customTextView"
                    android:text="@string/tv_version_info" />

                <EditText
                    android:id="@+id/et_version_info"
                    style="@style/customText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/customTextView"
                    android:text="@string/tv_version_size" />

                <EditText
                    android:id="@+id/et_version_size"
                    style="@style/customText"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/customTextView"
                    android:text="@string/tv_version_date" />

                <EditText
                    android:id="@+id/et_version_date"
                    style="@style/customText"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/customTextView"
                    android:text="@string/tv_version_standard" />

                <Spinner
                    android:id="@+id/spinner_version_standard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/customTextView"
                    android:text="@string/tv_test_type" />

                <Spinner
                    android:id="@+id/spinner_test_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/black" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="提交"
                android:textSize="18dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
